--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,12 +16,18 @@
 }
 
 .answersContainer {
-  width: 100%;
-  height: 250px;
+  width: 90%;
+  height: 400px;
   padding: 30px;
   background: rgb(150, 150, 150);
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: space-around;
+}
+
+.flex {
+  width: 65%;
+  display: flex;
+  justify-content: space-between;
 }
