--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 .container {
-  width: 600px;
-  height: 570px;
+  width: 700px;
+  height: 900px;
   margin: 0 auto;
   padding: 30px;
   background: rgb(150, 150, 150);
@@ -41,4 +41,8 @@
   width: 80%;
   display: flex;
   flex-flow: column;
+}
+
+.textAlignLeft {
+  text-align: left;
 }
