--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,6 +40,7 @@
 .answerButton {
   width: 100%;
   height: 50px;
+  text-transform: none;
 }
 
 /* Result */
@@ -98,6 +99,7 @@
 
 .textField {
   width: 100%;
+  height: 40px;
 }
 
 .qandaTitle {
