--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 /* common */
 .container {
-  width: 700px;
+  width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 30px;
   color: #61dafb;
@@ -9,6 +10,8 @@
   flex-flow: column;
   align-items: center;
   justify-content: space-around;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ",
+    Meiryo, "ＭＳ Ｐゴシック", sans-serif;
 }
 
 .colorWhite {
@@ -29,8 +32,7 @@
 }
 
 .qandaTitle {
-  width: 10%;
-  margin-right: 5px;
+  width: 60px;
 }
 
 .textField {
@@ -39,8 +41,12 @@
 }
 
 /* Menu */
+.title {
+  font-size: 40px;
+}
+
 .menuContainer {
-  width: 700px;
+  width: 100%;
   height: 550px;
   display: flex;
   flex-flow: column;
@@ -49,15 +55,22 @@
 }
 
 .menuButtonContainer {
-  width: 50%;
+  width: 300px;
   display: flex;
   justify-content: space-between;
 }
 
 /* Game */
+.question {
+  font-size: 30px;
+  width: 500px;
+  text-align: center;
+}
+
 .gameContainer {
   width: 500px;
-  height: 423px;
+  height: 400px;
+  margin-top: 40px;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -81,16 +94,20 @@
 }
 
 /* Edit */
+.editTitle {
+  text-align: center;
+}
+
 .editContainer {
   width: 80%;
   text-align: left;
 }
 
 .editButtonContainer {
-  width: 50%;
+  width: 300px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin: 30px 0;
 }
 
 /* Question */
@@ -104,10 +121,84 @@
 /* Create */
 
 .createContainer {
-  width: 500px;
+  width: 100%;
   height: 550px;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: space-around;
+}
+
+.createButtonContainer {
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 600px〜959px：タブレット
+------------------------------ */
+/* @media screen and (min-width: 480px) and (max-width: 959px) { */
+@media screen and (max-width: 959px) {
+  .question {
+    font-size: 25px;
+    width: 350px;
+  }
+
+  .gameContainer {
+    width: 300px;
+    height: 300px;
+  }
+
+  .answerButton {
+    width: 100%;
+    height: 40px;
+    font-size: 2px;
+  }
+}
+
+/* 〜479px：スマートフォン縦
+    ------------------------------ */
+@media screen and (max-width: 479px) {
+  .title {
+    font-size: 30px;
+  }
+
+  .menuButtonContainer {
+    width: 150px;
+    height: 90px;
+    flex-direction: column;
+  }
+
+  .question {
+    font-size: 20px;
+    width: 200px;
+  }
+
+  .gameContainer {
+    width: 200px;
+  }
+
+  .answerButton {
+    width: 100%;
+  }
+
+  .editButtonContainer {
+    width: 140px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 30px 0;
+  }
+
+  .createContainer {
+    height: 520px;
+  }
+
+  .createButtonContainer {
+    width: 150px;
+    height: 80px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
