--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -201,4 +201,10 @@
     flex-direction: column;
     justify-content: space-between;
   }
+
+  .resultContainer {
+    height: 400px;
+    font-size: 15px;
+  }
+  
 }
