--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -61,9 +61,15 @@
 }
 
 /* Game */
+.questionNumber {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
 .question {
   font-size: 30px;
   width: 500px;
+  height: 100px;
   text-align: center;
 }
 
@@ -169,18 +175,22 @@
     flex-direction: column;
   }
 
+  .questionNumber {
+    font-size: 15px;
+    margin-bottom: 10px;
+  }  
+
   .question {
-    font-size: 20px;
+    font-size: 18px;
     width: 200px;
+    height: 80px;
   }
 
   .gameContainer {
     width: 200px;
+    height: 300px;
   }
 
-  .answerButton {
-    width: 100%;
-  }
 
   .editButtonContainer {
     width: 140px;
