--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,7 +76,7 @@
 .gameContainer {
   width: 500px;
   height: 400px;
-  margin-top: 40px;
+  margin: 40px 0;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -181,7 +181,7 @@
   }  
 
   .question {
-    font-size: 18px;
+    font-size: 20px;
     width: 200px;
     height: 80px;
   }
