--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-/* common */
+/* 共通 */
 .container {
   width: 100%;
   min-height: 100vh;
@@ -85,7 +85,6 @@
 
 .none {
   font-size: 30px;
-  /* color: #282d33; */
   opacity: 0;
 }
 
@@ -94,14 +93,8 @@
   font-weight: bold;
   color: rgb(255, 255, 255);
   transition: 1s;
-  /* opacity: 0; /* ←初期値を変更。透明に。*/
-  /* animation: 0.7s fadeIn; ←追加 */
 }
 
-/* @keyframes fadeIn { 
-  from { opacity: 0; }
-  to { opacity: 0.5; }
-} */
 .answerButton {
   width: 80%;
   height: 50px;
@@ -153,7 +146,6 @@
 }
 
 /* Create */
-
 .createContainer {
   width: 70%;
   height: 550px;
@@ -169,9 +161,8 @@
   justify-content: space-between;
 }
 
-/* 600px〜959px：タブレット
+/* 〜959px：タブレット
 ------------------------------ */
-/* @media screen and (min-width: 480px) and (max-width: 959px) { */
 @media screen and (max-width: 959px) {
   .question {
     font-size: 25px;
